--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^6.0.3",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
+    "install": "^0.12.0",
+    "ngx-pagination": "^3.1.1",
     "rxjs": "^6.2.1",
     "time-ago-pipe": "^1.3.2",
     "zone.js": "^0.8.26"
