--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "install": "^0.12.0",
+    "ng-http-loader": "^2.3.0",
     "ngx-pagination": "^3.1.1",
     "rxjs": "^6.2.1",
     "time-ago-pipe": "^1.3.2",
